Closed Bug 1220939 Opened 9 years ago Closed 9 years ago

IonMonkey: MIPS64: jit-test (basic/bug1207863.js) failure in debug

Categories

(Core :: JavaScript Engine: JIT, defect)

Other
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: hev, Assigned: hev)

Details

Attachments

(1 file)

[heiher@heiher-laptop jit-test]$ python2 ./jit_test.py -f ../mips64-dbg/js/src/shell/js basic/bug1207863.js
Assertion failure: offset_ == offset, at /home/heiher/git/mips64/gecko-dev/js/src/jit/Label.h:63
Exit code: -11
FAIL - basic/bug1207863.js
[0|1|0|0] 100% ==========================================================>|   0.2s
FAILURES:
    /home/heiher/git/mips64/gecko-dev/js/src/mips64-dbg/js/src/shell/js -f /home/heiher/git/mips64/gecko-dev/js/src/jit-test/lib/prologue.js --js-cache /home/heiher/git/mips64/gecko-dev/js/src/jit-test/.js-cache -e "const platform='linux2'; const libdir='/home/heiher/git/mips64/gecko-dev/js/src/jit-test/lib/'; const scriptdir='/home/heiher/git/mips64/gecko-dev/js/src/jit-test/tests/basic/'" -f /home/heiher/git/mips64/gecko-dev/js/src/jit-test/tests/basic/bug1207863.js
TIMEOUTS:
(gdb) bt
#0  0x00000000008acd01 in js::jit::LabelBase::use (this=0x7fffffff9f20, offset=-2147483648)
    at /home/heiher/git/mips64/gecko-dev/js/src/jit/Label.h:63
#1  0x000000000091acfa in js::jit::MacroAssemblerMIPS64::branchWithCode (this=0x7fffffffa4f8, code=..., label=0x7fffffff9f20, 
    jumpKind=js::jit::LongJump) at /home/heiher/git/mips64/gecko-dev/js/src/jit/mips64/MacroAssembler-mips64.cpp:780
#2  0x00000000008badef in js::jit::MacroAssemblerMIPSShared::ma_b (this=0x7fffffffa4f8, label=0x7fffffff9f20, 
    jumpKind=js::jit::LongJump) at /home/heiher/git/mips64/gecko-dev/js/src/jit/mips-shared/MacroAssembler-mips-shared.cpp:441
#3  0x0000000000922687 in js::jit::MacroAssemblerMIPS64Compat::toggledJump (this=0x7fffffffa4f8, label=0x7fffffff9f20)
    at /home/heiher/git/mips64/gecko-dev/js/src/jit/mips64/MacroAssembler-mips64.cpp:2883
#4  0x0000000000e218ee in js::jit::BaselineCompiler::emitTraceLoggerEnter (this=0x7fffffffa4e0)
    at /home/heiher/git/mips64/gecko-dev/js/src/jit/BaselineCompiler.cpp:830
#5  0x0000000000e2012f in js::jit::BaselineCompiler::emitPrologue (this=0x7fffffffa4e0)
    at /home/heiher/git/mips64/gecko-dev/js/src/jit/BaselineCompiler.cpp:411
#6  0x0000000000e1ec29 in js::jit::BaselineCompiler::compile (this=0x7fffffffa4e0)
    at /home/heiher/git/mips64/gecko-dev/js/src/jit/BaselineCompiler.cpp:108
#7  0x0000000000631f5d in js::jit::BaselineCompile (cx=0x7ffff6119400, script=0x7ffff3d653d0, forceDebugInstrumentation=false)
    at /home/heiher/git/mips64/gecko-dev/js/src/jit/BaselineJIT.cpp:268
#8  0x00000000006321fc in CanEnterBaselineJIT (cx=0x7ffff6119400, script=..., osrFrame=0x0)
    at /home/heiher/git/mips64/gecko-dev/js/src/jit/BaselineJIT.cpp:307
#9  0x0000000000632492 in js::jit::CanEnterBaselineMethod (cx=0x7ffff6119400, state=...)
    at /home/heiher/git/mips64/gecko-dev/js/src/jit/BaselineJIT.cpp:371
#10 0x0000000000b71ac7 in js::RunScript (cx=0x7ffff6119400, state=...)
    at /home/heiher/git/mips64/gecko-dev/js/src/vm/Interpreter.cpp:416
#11 0x0000000000b7202f in js::Invoke (cx=0x7ffff6119400, args=..., construct=js::NO_CONSTRUCT)
    at /home/heiher/git/mips64/gecko-dev/js/src/vm/Interpreter.cpp:507
#12 0x0000000000b72357 in js::Invoke (cx=0x7ffff6119400, thisv=..., fval=..., argc=0, argv=0x7ffff3fffe38, rval=...)
    at /home/heiher/git/mips64/gecko-dev/js/src/vm/Interpreter.cpp:542
#13 0x0000000000e584e4 in js::jit::DoCallFallback (cx=0x7ffff6119400, frame=0x7ffff3fffe78, stub_=0x7ffff3bbf620, argc=0, 
    vp=0x7ffff3fffe28, res=...) at /home/heiher/git/mips64/gecko-dev/js/src/jit/BaselineIC.cpp:9025
#14 0x000000000092baa0 in js::jit::Simulator::softwareInterrupt (this=0x7ffff61a7000, instr=0x7ffff3b9fc08)
    at /home/heiher/git/mips64/gecko-dev/js/src/jit/mips64/Simulator-mips64.cpp:1976
#15 0x000000000092fbcb in js::jit::Simulator::decodeTypeRegister (this=0x7ffff61a7000, instr=0x7ffff3b9fc08)
    at /home/heiher/git/mips64/gecko-dev/js/src/jit/mips64/Simulator-mips64.cpp:3128
#16 0x000000000093153e in js::jit::Simulator::instructionDecode (this=0x7ffff61a7000, instr=0x7ffff3b9fc08)
    at /home/heiher/git/mips64/gecko-dev/js/src/jit/mips64/Simulator-mips64.cpp:3637
#17 0x00000000009437d1 in js::jit::Simulator::execute<false> (this=0x7ffff61a7000)
    at /home/heiher/git/mips64/gecko-dev/js/src/jit/mips64/Simulator-mips64.cpp:3710
#18 0x000000000093196e in js::jit::Simulator::callInternal (this=0x7ffff61a7000, entry=0x7ffff7fe9568 "p\377\275g\200")
    at /home/heiher/git/mips64/gecko-dev/js/src/jit/mips64/Simulator-mips64.cpp:3771
#19 0x0000000000931f8c in js::jit::Simulator::call (this=0x7ffff61a7000, entry=0x7ffff7fe9568 "p\377\275g\200", argument_count=8)
    at /home/heiher/git/mips64/gecko-dev/js/src/jit/mips64/Simulator-mips64.cpp:3829
#20 0x00000000006314af in EnterBaseline (cx=0x7ffff6119400, data=...)
    at /home/heiher/git/mips64/gecko-dev/js/src/jit/BaselineJIT.cpp:126
#21 0x0000000000631cf3 in js::jit::EnterBaselineAtBranch (cx=0x7ffff6119400, fp=0x7ffff3b6c0c8, pc=0x7ffff6138cd1 "う\232")
    at /home/heiher/git/mips64/gecko-dev/js/src/jit/BaselineJIT.cpp:233
#22 0x0000000000b76c62 in Interpret (cx=0x7ffff6119400, state=...) at /home/heiher/git/mips64/gecko-dev/js/src/vm/Interpreter.cpp:1858
#23 0x0000000000b71b7e in js::RunScript (cx=0x7ffff6119400, state=...)
    at /home/heiher/git/mips64/gecko-dev/js/src/vm/Interpreter.cpp:430
#24 0x0000000000b72fa9 in js::ExecuteKernel (cx=0x7ffff6119400, script=..., scopeChainArg=..., thisv=..., newTargetValue=..., 
    type=js::EXECUTE_GLOBAL, evalInFrame=..., result=0x0) at /home/heiher/git/mips64/gecko-dev/js/src/vm/Interpreter.cpp:703
#25 0x0000000000b73375 in js::Execute (cx=0x7ffff6119400, script=..., scopeChainArg=..., rval=0x0)
    at /home/heiher/git/mips64/gecko-dev/js/src/vm/Interpreter.cpp:742
#26 0x000000000095de16 in ExecuteScript (cx=0x7ffff6119400, scope=..., script=..., rval=0x0)
    at /home/heiher/git/mips64/gecko-dev/js/src/jsapi.cpp:4389
#27 0x000000000095e1e4 in JS_ExecuteScript (cx=0x7ffff6119400, scriptArg=...)
    at /home/heiher/git/mips64/gecko-dev/js/src/jsapi.cpp:4422
#28 0x00000000004318be in RunFile (cx=0x7ffff6119400, 
    filename=0x7fffffffec78 "/home/heiher/git/mips64/gecko-dev/js/src/jit-test/tests/basic/bug1207863.js", file=0x7ffff3a09000, 
    compileOnly=false) at /home/heiher/git/mips64/gecko-dev/js/src/shell/js.cpp:510
#29 0x00000000004320a8 in Process (cx=0x7ffff6119400, 
    filename=0x7fffffffec78 "/home/heiher/git/mips64/gecko-dev/js/src/jit-test/tests/basic/bug1207863.js", forceTTY=false)
    at /home/heiher/git/mips64/gecko-dev/js/src/shell/js.cpp:629
#30 0x0000000000445d0c in ProcessArgs (cx=0x7ffff6119400, op=0x7fffffffe630)
    at /home/heiher/git/mips64/gecko-dev/js/src/shell/js.cpp:5995
#31 0x0000000000446f89 in Shell (cx=0x7ffff6119400, op=0x7fffffffe630, envp=0x7fffffffe8c8)
    at /home/heiher/git/mips64/gecko-dev/js/src/shell/js.cpp:6320
#32 0x000000000044830c in main (argc=9, argv=0x7fffffffe878, envp=0x7fffffffe8c8)
    at /home/heiher/git/mips64/gecko-dev/js/src/shell/js.cpp:6677
Attachment #8683433 - Flags: review?(jolesen)
Assignee: nobody → r
Status: NEW → ASSIGNED
Attachment #8683433 - Flags: review?(jolesen) → review+
https://hg.mozilla.org/mozilla-central/rev/01fb4d36019d
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: