Bug 1220939 - IonMonkey: MIPS: Check oom() before using editSrc() and Label::use(). r=jolesen

---
 js/src/jit/mips-shared/Assembler-mips-shared.cpp | 6 +++++-
 js/src/jit/mips32/Assembler-mips32.cpp           | 2 +-
 js/src/jit/mips32/MacroAssembler-mips32.cpp      | 9 ++++++---
 js/src/jit/mips64/Assembler-mips64.cpp           | 2 +-
 js/src/jit/mips64/MacroAssembler-mips64.cpp      | 9 ++++++---
 5 files changed, 19 insertions(+), 9 deletions(-)