js/src/jit/mips32/MacroAssembler-mips32.cpp
@@ -596,7 +596,8 @@ MacroAssemblerMIPS::ma_bal(Label* label, DelaySlotFill delaySlotFill)
 
     BufferOffset bo = writeInst(getBranchCode(BranchIsCall).encode());
     writeInst(nextInChain);
-    label->use(bo.getOffset());
+    if (!oom())
+        label->use(bo.getOffset());
     // Leave space for long jump.
     as_nop();
     if (delaySlotFill == FillDelaySlot)
@@ -655,7 +656,8 @@ MacroAssemblerMIPS::branchWithCode(InstImm code, Label* label, JumpKind jumpKind
         code.setBOffImm16(BOffImm16(4));
         BufferOffset bo = writeInst(code.encode());
         writeInst(nextInChain);
-        label->use(bo.getOffset());
+        if (!oom())
+            label->use(bo.getOffset());
         return;
     }
 
@@ -666,7 +668,8 @@ MacroAssemblerMIPS::branchWithCode(InstImm code, Label* label, JumpKind jumpKind
 
     BufferOffset bo = writeInst(code.encode());
     writeInst(nextInChain);
-    label->use(bo.getOffset());
+    if (!oom())
+        label->use(bo.getOffset());
     // Leave space for potential long jump.
     as_nop();
     as_nop();
